# dev

./: .gitignore  README.md  db_handler.py
contract-fipo/: .env.template  README.md  install.sh  pyproject.toml  run_with_env.sh  setup.sh
contract-fipo/contract_fipo/: __init__.py  ai_client.py  api.py  config.py  db_handler.py  main.py  parser.py  pii_handler.py
contract-fipo/sample_contracts/: complex_msa.txt  simple_contract.txt  standard_nda.txt
contract-fipo/tests/: __init__.py  conftest.py  test_ai_client.py  test_api.py  test_api_fixed.py  test_db_handler.py  test_env_loading.py  test_main.py  test_parser.py  test_pii_handler.py  thistest.py
