[tool.poetry]
name = "contract-fipo"
version = "0.1.0"
description = "Contract analysis tool with PII detection and Grok AI integration"
authors = ["User <user@example.com>"]
readme = "README.md"
packages = [{include = "contract_fipo"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = {version = "0.27.0", extras = ["http2"]}  # Specific version to fix compatibility issues with FastAPI TestClient
starlette = "0.37.2"  # Specific version to ensure compatibility with FastAPI
pdfplumber = "^0.10.0"
nltk = "^3.8.1"
spacy = "^3.7.2"
presidio-analyzer = "^2.2.354"
presidio-anonymizer = "^2.2.354"
openai = "^1.12.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.27.0"
fastapi = "0.111.0"  # Specific version to fix TypeError issues with TestClient
tenacity = "^8.2.3"
celery = "^5.3.6"
redis = "^5.0.1"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-mock = "^3.12.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
contract-fipo = "contract_fipo.main:main"